examples/bad/ERROR_UNEXPECTED_PATTERN_FOR_TYPE/tuple_size.st
language core;

extend with #tuples, #structural-patterns;

fn foo(a : Nat) -> { Nat, Bool } {
  return { 0, true }
}

fn main(n : Nat) -> Nat {
  return match(foo(0)) {
    {x, y, z} => x
	}
}

//ERROR_UNEXPECTED_PATTERN_FOR_TYPE
